// Copyright 2023 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package swarming.integrationmocks;

option go_package = "go.chromium.org/luci/swarming/server/testing/integrationmocks";

import "go.chromium.org/luci/swarming/proto/internals/rbe.proto";


// IntegrationMocks is called by local integration tests as replacement for
// Swarming Python endpoints.
//
// IntegrationMocks is compiled into the main server binary, but it is exposed
// only when the CLI flag `-expose-integration-mocks` is set (which happens in
// integration tests).
service IntegrationMocks {
  // GeneratePollToken produces a HMAC-tagged poll token.
  rpc GeneratePollToken(swarming.internals.rbe.PollState) returns (PollToken);
}


// PollToken carries HMAC-tagged poll token, as if it was returned by
// Swarming Python's "/bot/poll" response.
message PollToken {
  bytes poll_token = 1;
}
